# starlist_bangumi

./: .gitignore  LICENSE  README.md  pyproject.toml  start.ps1
data/: config.example.json
docs/: cli-reference.md  cli-run-flow.md  design-open-items.md  design-questions.md  llm-organization-module.md
src/starlist_bangumi/: __init__.py  __main__.py  api.py  cli_runs.py  config.py  error_formatting.py  exceptions.py  main.py  models.py  pathing.py  report_exporter.py  run_cleanup.py  run_index.py
src/starlist_bangumi/clients/: __init__.py  llm.py  openlist.py  tmdb.py
src/starlist_bangumi/prompts/: decide_mappings.md  identify_work.md  select_candidates.md
src/starlist_bangumi/services/: __init__.py  executor.py  plan_builder.py  runtime.py  scanner.py  web_tasks.py
src/starlist_bangumi/static/: app.js  index.html  styles.css
tests/: test_api.py  test_clients.py  test_config.py  test_executor.py  test_organize_run.py  test_plan_builder.py  test_remap_run.py  test_report_exporter.py  test_run_cleanup.py  test_run_index.py  test_scanner.py
tools/: build_windows.ps1  cleanup_runs.py  export_report.py  list_runs.py  llm_debug_pipeline.py  organize_run.py  remap_run.py
