[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "starlist-bangumi"
version = "0.1.0"
description = "Desktop WebView app for organizing Bangumi folders in OpenList with LLM-assisted dry-run plans."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
    "pywebview>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
starlist-bangumi = "starlist_bangumi.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/starlist_bangumi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

